--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -324,84 +324,84 @@
     	<string name="There_is_already_an_operation_running">Уже запущена одна операция. Дождитесь ее завершения.</string>
     
     	<!-- Question dialogs -->
-    	<string name="Are_you_sure_you_want_to_clear_the_history">Are you sure you want to clear the history?</string>
-    	<string name="Are_you_sure_you_want_to_clear_the_thumbnail_cache">Are you sure you want to clear the thumbnail cache?</string>
-    	<string name="Are_you_sure_you_want_to_delete_temporary_files">Are you sure you want to delete temporary files?</string>
-    	<string name="It_is_time_for_sheduled_indexing">It is time for scheduled indexing. Would you like to perform an index now?</string>
-    	<string name="Folder_exists_descr">There is already a folder with the same name in the directory. What do you want to do?</string>
-    	<string name="File_exists_descr">There is already a file with the same name in the directory. What do you want to do?</string>
-    	<string name="Are_you_sure_you_want_to_delete">Are you sure you want to delete \&quot;%\&quot;?</string>
-    	<string name="Are_you_sure_to_abort_current_operation">Are you sure to abort the current operation?</string>
-    	<string name="Are_you_sure_you_want_to_delete_all_bookmarks">Are you sure you want to delete all bookmarks?</string>
-    	<string name="Are_you_sure_you_want_to_delete_bookmark">Are you sure you want to delete bookmark \&quot;%\&quot; ?</string>
-    	<string name="Reindex_prompt">Performing an index. This can take several minutes. Proceed?</string>
-    	<string name="Clear_index_prompt">Are you sure you want to clear all index data? This operation can not be undone.</string>
-    	<string name="Are_you_sure_to_stop_indexing">Are you sure you want to stop indexing?</string>
-    	<string name="Are_you_sure_you_want_to_clear_file_type_associations">Are you sure you want to clear file type associations?</string>
-    	<string name="Changes_have_been_made_to_the_file">Changes have been made to the &quot;%&quot;. Do you wish to save them?</string>
-    	<string name="Chown_confirm">Are you sure you want to change the ownership of this file?</string>
-    	<string name="Busybox_request">It looks like BusyBox is not installed on your device or its version is outdated. It is required to explore the root of your filesystem. Do you want to install it now?</string>
+    	<string name="Are_you_sure_you_want_to_clear_the_history">Вы уверены, что хотите очистить историю?</string>
+    	<string name="Are_you_sure_you_want_to_clear_the_thumbnail_cache">Вы уверены, что хотите очистить кэш миниатюр?</string>
+    	<string name="Are_you_sure_you_want_to_delete_temporary_files">Вы уверены, что хотите удалить временные файлы?</string>
+    	<string name="It_is_time_for_sheduled_indexing">Запуск запланированной индексации. Хотите выполнить её сейчас?</string>
+    	<string name="Folder_exists_descr">В этой директории уже существует такая папка. Выберите действие.</string>
+    	<string name="File_exists_descr">В этой директории уже существует такой файл. Выберите действие.</string>
+    	<string name="Are_you_sure_you_want_to_delete">Вы действительно хотите удалить \&quot;%\&quot;?</string>
+    	<string name="Are_you_sure_to_abort_current_operation">Вы действительно хотите прервать текущую операцию?</string>
+    	<string name="Are_you_sure_you_want_to_delete_all_bookmarks">Вы уверены, что хотите удалить все закладки?</string>
+    	<string name="Are_you_sure_you_want_to_delete_bookmark">Вы действительно хотите удалить закладку \&quot;%\&quot; ?</string>
+    	<string name="Reindex_prompt">Выполнение индексации. Это может занять несколько минут. Продолжить?</string>
+    	<string name="Clear_index_prompt">Вы уверены, что хотите удалить все данные индекса? Операция без отмены!</string>
+    	<string name="Are_you_sure_to_stop_indexing">Вы уверены, что хотите остановить индексацию?</string>
+    	<string name="Are_you_sure_you_want_to_clear_file_type_associations">Точно хотите удалить ассоциации типов файлов?</string>
+    	<string name="Changes_have_been_made_to_the_file">Были внесены изменения в &quot;%&quot;. Хотите их сохранить?</string>
+    	<string name="Chown_confirm">Вы уверены, что хотите изменить владельца этого файла?</string>
+    	<string name="Busybox_request">Возможно BusyBox не установлен в вашей системе. Для правильной работы с корневым каталогом, необходимо его установить. Хотите установить его сейчас?</string>
     	
     	
     	<!-- Information dialogs -->
-    	<string name="SkyDrive_doesnt_support_x_files">SkyDrive does not support \&quot;%\&quot; files. Operation has been aborted.</string>
-    	<string name="Operation_not_supported">Operation not supported</string>
-    	<string name="You_have_to_provide_a_password">You must provide a password</string>
-    	<string name="Insufficient_space" formatted="false">There is not enough free space to complete the operation. Size: %, available: %.</string>
-    	<string name="Command_executed_successfully">Command executed successfully</string>
-    	<string name="Deleting_data">Deleting the data</string>
-    	<string name="Done">Done</string>
-    	<string name="Preparing_for_operation">Preparing for operation...</string>
-    	<string name="Connecting">Connecting</string>
-    	<string name="Connecting_to_x">Connecting to \&quot;%\&quot;</string>
-    	<string name="File_is_too_big">This file is too big. Only files up to 75kB are supported for editing. Bigger files will be supported soon.</string>
-    	<string name="Operation_history_has_been_cleared">Operation history has been cleared</string>
-    	<string name="Encrypted_archive">Encrypted archive</string>
-    	<string name="Enter_the_password">Enter the password</string>
-    	<string name="Confirmation">Confirmation</string>
-    	<string name="Input_request">Input request</string>
-    	<string name="Message">Message</string>
-    	<string name="Warning">Warning!</string>
-    	<string name="You_did_not_specify_a_password">You didn\'t specify a password</string>
-    	<string name="Reading_archive">Reading archive</string>
-    	<string name="Reading_archive_x">Reading archive \&quot;%\&quot;</string>
-    	<string name="Storage_not_available">Storage not available</string>
-    	<string name="The_password_given_is_incorrect">The given password is incorrect</string>
-    	<string name="You_did_not_specify_a_server_name">You did not specify a server name</string>
-    	<string name="You_did_not_specify_a_computer_name">You did not specify a computer name</string>
-    	<string name="You_did_not_specify_a_port_number">You did not specify a port number</string>
-    	<string name="You_did_not_specify_user_name">You did not specify user name</string>
-    	<string name="Indexing">Indexing</string>
-    	<string name="Indexing_in_progress">Indexing in progress</string>
-    	<string name="Indexing_paused">Indexing paused</string>
-    	<string name="Indexing_has_been_completed">Indexing has  completed</string>
-    	<string name="Indexing_has_been_aborted">Indexing has been aborted</string>
-    	<string name="Tap_to_dismiss">Tap to dismiss</string>
-    	<string name="Tap_top_open">Tap to open</string>
-    	<string name="File_is_ready_to_open">File is ready to open</string>
+    	<string name="SkyDrive_doesnt_support_x_files">SkyDrive не поддерживает \&quot;%\&quot; файлы. Операция прервана.</string>
+    	<string name="Operation_not_supported">Операция не поддерживается</string>
+    	<string name="You_have_to_provide_a_password">Вы должны предоставить пароль</string>
+    	<string name="Insufficient_space" formatted="false">Не хватает места, для завершения операции. Размер: %, Доступно: %.</string>
+    	<string name="Command_executed_successfully">Команда выполнена успешно</string>
+    	<string name="Deleting_data">Удаление данных</string>
+    	<string name="Done">Готово</string>
+    	<string name="Preparing_for_operation">Подготовка операции...</string>
+    	<string name="Connecting">Соединение</string>
+    	<string name="Connecting_to_x">Подключение к \&quot;%\&quot;</string>
+    	<string name="File_is_too_big">Файл слишком большой. Для редактирования поддерживаются, файлы только до 75kB.</string>
+    	<string name="Operation_history_has_been_cleared">История операций была очищена</string>
+    	<string name="Encrypted_archive">Зашифрованный архив</string>
+    	<string name="Enter_the_password">Введите пароль</string>
+    	<string name="Confirmation">Подтвердить</string>
+    	<string name="Input_request">Запрос на ввод</string>
+    	<string name="Message">Сообщение</string>
+    	<string name="Warning">Внимание!</string>
+    	<string name="You_did_not_specify_a_password">Вы не указали пароль</string>
+    	<string name="Reading_archive">Чтение архива</string>
+    	<string name="Reading_archive_x">Чтение архива \&quot;%\&quot;</string>
+    	<string name="Storage_not_available">Хранилище не доступно</string>
+    	<string name="The_password_given_is_incorrect">Введенный пароль неверный</string>
+    	<string name="You_did_not_specify_a_server_name">Вы не указали имя сервера</string>
+    	<string name="You_did_not_specify_a_computer_name">Вы не указали имя компьютера</string>
+    	<string name="You_did_not_specify_a_port_number">Вы не указали номер порта</string>
+    	<string name="You_did_not_specify_user_name">Вы не указали имя пользователя</string>
+    	<string name="Indexing">Индексация</string>
+    	<string name="Indexing_in_progress">Индексирование</string>
+    	<string name="Indexing_paused">Индексация приостановлена</string>
+    	<string name="Indexing_has_been_completed">Индексация завершена</string>
+    	<string name="Indexing_has_been_aborted">Индексация была прервана</string>
+    	<string name="Tap_to_dismiss">Нажмите, чтобы закрыть</string>
+    	<string name="Tap_top_open">Нажмите, чтобы открыть</string>
+    	<string name="File_is_ready_to_open">Файл готов для открытия</string>
     	
-    	<string name="Operation_aborted_by_user">Operation aborted by user</string>
-    	<string name="You_cant_delete_this_item">This item cannot be deleted</string>
-    	<string name="Indexing_service">Indexing service</string>
-    	<string name="Only_local_file_can_be_added_to_the_archive">Only a locally-stored file can be added to the archive</string>
-    	<string name="Bookmark_already_exists">Bookmark already exists</string>
-    	<string name="Added_to_bookmarks">\&quot;%\&quot; added to bookmarks</string>
-    	<string name="Rename_a_file">Rename a file</string>
-    	<string name="Input_was_left_blank">Input was left blank</string>
-    	<string name="File_named_already_exists">File named \&quot;%\&quot; already exists</string>
-    	<string name="Confirm_delete">Confirm delete</string>
-    	<string name="You_cant_create_an_archive_here">Archives cannot be created here</string>
-    	<string name="Cannot_connect_to">Cannot connect to \&quot;%\&quot;</string>
-    	<string name="You_are_not_logged_in">You are not logged in</string>
-		<string name="Can_not_create_the_directory">Cannot create the directory</string>
+    	<string name="Operation_aborted_by_user">Операция отменена пользователем</string>
+    	<string name="You_cant_delete_this_item">Вы не можете это удалить</string>
+    	<string name="Indexing_service">Служба индексирования</string>
+    	<string name="Only_local_file_can_be_added_to_the_archive">Только локальный файл можно добавить в архив</string>
+    	<string name="Bookmark_already_exists">Закладка уже существует</string>
+    	<string name="Added_to_bookmarks">\&quot;%\&quot; добавлено в закладки</string>
+    	<string name="Rename_a_file">Переименовать файл</string>
+    	<string name="Input_was_left_blank">Ввод был пустым</string>
+    	<string name="File_named_already_exists">Файл с именем \&quot;%\&quot; уже существует</string>
+    	<string name="Confirm_delete">Подтвердите удаление</string>
+    	<string name="You_cant_create_an_archive_here">Вы не можете создать архив здесь</string>
+    	<string name="Cannot_connect_to">Не удается подключиться к \&quot;%\&quot;</string>
+    	<string name="You_are_not_logged_in">Вы не авторизованы</string>
+		<string name="Can_not_create_the_directory">Не удается создать каталог</string>
 
-    	<string name="Can_not_create_the_file">Cannot create the file</string>
-    	<string name="Uknown_file_type">Unknown file type</string>
-    	<string name="No_activity_found_to_open_this_file">No activity capable of opening this file was found</string>
-    	<string name="You_cant_send_a_folder">Folders cannot be sent</string>
-    	<string name="Indexing_has_been_unscheduled">Indexing has been descheduled</string>
-    	<string name="Scheduled_indexing">Scheduled indexing</string>
-    	<string name="Tap_to_start">Tap to start</string>
+    	<string name="Can_not_create_the_file">Не удается создать файл</string>
+    	<string name="Uknown_file_type">Неизвестный тип файла</string>
+    	<string name="No_activity_found_to_open_this_file">Не найдено приложений, для открытия этого файла</string>
+    	<string name="You_cant_send_a_folder">Нельзя отправить папку</string>
+    	<string name="Indexing_has_been_unscheduled">Индексация была перенесена</string>
+    	<string name="Scheduled_indexing">Запланированная индексация</string>
+    	<string name="Tap_to_start">Нажмите, чтобы начать</string>
     	
     	
     	<string name="Are_you_sure_you_want_to_delete_items">Are you sure you want to delete % item{1:|__:s}?</string>
