--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -404,15 +404,15 @@
     	<string name="Tap_to_start">Нажмите, чтобы начать</string>
     	
     	
-    	<string name="Are_you_sure_you_want_to_delete_items">Are you sure you want to delete % item{1:|__:s}?</string>
-    	<string name="X_files_deleted">% file{1:|__:s} deleted.</string>
-    	<string name="X_files_copied">% file{1:|__:s} copied.</string>
-    	<string name="X_files_moved">% file{1:|__:s} moved.</string>
-    	<string name="X_items">% item{1:|__:s}</string>
-    	<string name="Deleting_X_files">Deleting % file{1:|__:s}</string>
-    	<string name="Copying_X_files">Copying % file{1:|__:s}</string>
-    	<string name="Moving_X_files">Moving % file{1:|__:s}</string>
-    	<string name="Indexing_scheduled_at_X_every_Y">Indexing scheduled at %x every %y day{1:|__:s}</string>
+    	<string name="Are_you_sure_you_want_to_delete_items">Вы уверены, что хотите удалить % элемент{1:|2-4:а|_2-4:а|__:ов}?</string>
+    	<string name="X_files_deleted">% файл{1:|2-4:а|_2-4:а|__:ов} удалено.</string>
+    	<string name="X_files_copied">% файл{1:|2-4:а|_2-4:а|__:ов} скопировано.</string>
+    	<string name="X_files_moved">% файл{1:|2-4:а|_2-4:а|__:ов} перемещено.</string>
+    	<string name="X_items">% елемент{1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Deleting_X_files">Удаление % файл{1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Copying_X_files">Копирование % файл{1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Moving_X_files">Перемещение % файл{1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Indexing_scheduled_at_X_every_Y">Индексация запланирована на %x каждый %y д{1:ень|__:ей}</string>
     	<!-- Explanation of above
     	
     		 	In english things are simple because we have 1 file and multiple files.
