--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -404,14 +404,14 @@
     	<string name="Tap_to_start">Нажмите, чтобы начать</string>
     	
     	
-    	<string name="Are_you_sure_you_want_to_delete_items">Вы уверены, что хотите удалить % элемент{1:|2-4:а|_2-4:а|__:ов}?</string>
-    	<string name="X_files_deleted">% файл{1:|2-4:а|_2-4:а|__:ов} удалено.</string>
-    	<string name="X_files_copied">% файл{1:|2-4:а|_2-4:а|__:ов} скопировано.</string>
-    	<string name="X_files_moved">% файл{1:|2-4:а|_2-4:а|__:ов} перемещено.</string>
-    	<string name="X_items">% елемент{1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Deleting_X_files">Удаление % файл{1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Copying_X_files">Копирование % файл{1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Moving_X_files">Перемещение % файл{1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Are_you_sure_you_want_to_delete_items">Вы уверены, что хотите удалить % элемент{0:ов|1:|2-4:а|_2-4:а|__:ов}?</string>
+    	<string name="X_files_deleted">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} удалено.</string>
+    	<string name="X_files_copied">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} скопировано.</string>
+    	<string name="X_files_moved">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} перемещено.</string>
+    	<string name="X_items">% елемент{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Deleting_X_files">Удаление % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Copying_X_files">Копирование % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="Moving_X_files">Перемещение % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
     	<string name="Indexing_scheduled_at_X_every_Y">Индексация запланирована на %x каждый %y д{1:ень|2-4:ня|_2-4:ня|__:ней}</string>
     	<!-- Explanation of above
     	
